# pure-checker

./: .gitignore  AUTHORS  README.md  pure_checker.c  pure_py.c  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
include/: pure.h
tests/: test_pure_py.py
