# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pure-checker"  # as it would appear on PyPI
version = "1.0.4"
description = "A static analysis file format checker."
readme = "README.md"
authors = [
  {name = "Joran Dirk Greef (Ronomon)"},
  {name = "Maxim Vainstein (Microsoft)"},
  {name = "Milind Solage (Microsoft)"},
  {name = "Patrik Vicol (Microsoft)"},
  {name = "Stacy Sheperson (Microsoft)"},
]
maintainers = [
  {name = "Seb", email = "me@sebjo.se"},
]
license = {file = "LICENSE"}