# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pure-checker"  # as it would appear on PyPI
version = "2.1"
requires-python = ">=3.8"
description = "A static analysis file format checker."
readme = "README.md"
authors = [
  {name = "Joran Dirk Greef (Ronomon)"},
  {name = "Maxim Vainstein (Microsoft)"},
  {name = "Milind Solage (Microsoft)"},
  {name = "Patrik Vicol (Microsoft)"},
  {name = "Stacy Sheperson (Microsoft)"},
]
maintainers = [
  {name = "Seb", email = "me@sebjo.se"},
]
license = {file = "LICENSE"}

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {package}/tests"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = "yum install -y zlib-devel"